--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -26,28 +26,27 @@
                     <input id="search" type="text" class="form-control tags" name="search"
                            th:placeholder="#{common.search}" required="required"/>
                 </div>
-                <button type="submit" class="btn btn-default" th:value="#{common.searchButton}">Search</button>
+                <button type="submit" class="btn btn-default" th:text="#{common.searchButton}"></button>
             </form>
             <div id="navbar" class="navbar-collapse collapse">
                 <form class="navbar-form navbar-right">
                     <div sec:authorize="isAuthenticated()">
-                        <a class="navbar-brand glyphicon"  th:href="@{/feed}">Feed</a>
+                        <a class="navbar-brand glyphicon"  th:href="@{/feed}" th:text="#{common.feed}">Feed</a>
                         <a sec:authorize="hasRole('ROLE_ADMIN')" class="navbar-brand glyphicon glyphicon-cog"
                            href="/admin"></a>
                         <a class="navbar-brand glyphicon glyphicon-userForm" th:href="@{'/'+${#authentication.name}}+'/home'"
                            th:text="${#authentication.name}"></a>
-
                         <a class="navbar-brand glyphicon glyphicon-log-out" th:href="@{/logout}"
                            th:text="#{common.logout}">Logout</a>
                         <a class="navbar-brand glyphicon" href="?lang=ru">ru</a> <a
                             class="navbar-brand glyphicon" href="?lang=en">en</a>
                     </div>
                     <div sec:authorize="isAnonymous()">
-                        <a class="navbar-brand glyphicon"  th:href="@{/feed}">Feed</a>
+                        <a class="navbar-brand glyphicon"  th:href="@{/feed}" th:text="#{common.feed}">Feed</a>
                         <a class="navbar-brand glyphicon glyphicon-log-in"
-                           th:href="@{/login}">Login</a>
+                           th:href="@{/login}" th:text="#{common.login}">Login</a>
                         <a class="navbar-brand glyphicon glyphicon-globe"
-                           th:href="@{/registration}">Register</a>
+                           th:href="@{/registration}" th:text="#{common.register}">Register</a>
                         <a class="navbar-brand" href="?lang=ru">ru</a> <a
                             class="navbar-brand" href="?lang=en">en</a>
                     </div>
