--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,21 +3,70 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Blog Constructor</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" th:href="@{/css/min-decor.css}"/>
     <link rel="stylesheet"
-          href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+          href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet"
-          href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css" />
+          href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css"/>
 </head>
 <body>
 <div th:replace="header :: header">
 </div>
 <p></p>
 <div class="container">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img th:src="@{/img/img1.jpg}" alt="Image"/>
+                <div class="carousel-caption">
+                    <h3>Develop blogs</h3>
+                    <p>Easier... Better...</p>
+                </div>
+            </div>
+
+            <div class="item">
+                <img th:src="@{/img/img2.jpg}" alt="Image"/>
+                <div class="carousel-caption">
+                    <h3>Make money</h3>
+                    <p>It's easy to be successful</p>
+                </div>
+            </div>
+        </div>
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button"
+           data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"
+                                    aria-hidden="true"></span> <span class="sr-only">Previous</span>
+        </a> <a class="right carousel-control" href="#myCarousel" role="button"
+                data-slide="next"> <span
+            class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+    </div>
+    <br/>
+    <br/>
+    <br/>
+    <div class="row">
+        <div class="col-md-2">
+            Guide for users:
+        </div>
+        <div class="col-md-2">
+            <iframe src="//www.youtube.com/embed/YRMFcC4lTPA" width="560" height="314"
+                    allowfullscreen="allowfullscreen"></iframe>
+        </div>
+    </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <div th:replace="tags :: tags">
 </div>
 </body>
