--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
         <div class="col-md-4">
             <form class="col-md-12  form-signin" th:object="${userForm}" th:action="@{/login}"
                   method="post">
-                <h2 class="form-signin-heading">Please sign in</h2>
+                <h2 class="form-signin-heading" th:text="#{common.please.login}"></h2>
                 <div class="form-group">
                     <input type="text" class="form-control text-center input-lg"
                            th:value="${session[username]}" th:placeholder="#{user.form.username}"
@@ -49,7 +49,7 @@
                 </div>
                 <div class="form-group">
                     <input type="submit" class="btn btn-block btn-lg btn-primary"
-                           value="Sign in"/>
+                           th:value="#{common.login}"/>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
